Games tab added, including service

--- a/src/app/layout/bs-element/bs-element.component.html
+++ b/src/app/layout/bs-element/bs-element.component.html
@@ -285,5 +285,25 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-4">
+        <div class="card card-danger card-inverse mb-3">
+            <div class="card-header card-danger">
+                Card title
+            </div>
+            <div class="card-block bg-white">
+                Card content
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="card card-danger card-inverse mb-3">
+            <div class="card-header card-danger">
+                Card title
+            </div>
+            <div class="card-block bg-white">
+                Card content
+            </div>
+        </div>
+    </div>
     <!-- /.col-sm-4 -->
 </div>
