--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
                         <input name="password" type="password" [(ngModel)]="model.password" class="form-control input-underline input-lg" id="" placeholder="Password">
                     </div>
                 </div>
-                <a class="btn rounded-btn" (click)="login($event)"> {{title}} </a>
+                <a class="btn rounded-btn" (click)="login($event)"> Submit </a>
                 &nbsp;
                 <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a>
             </form>
