--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,18 +3,9 @@
         <button class="navbar-toggler navbar-toggler-right" (click)="toggleSidebar()">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">SB Admin BS 4 Angular4</a>
+        <a class="navbar-brand" href="#">RAGE Analytics</a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            </form>
             <ul class="navbar-nav ml-auto mt-2 mt-md-0">
-                <li class="nav-item">
-                    <a href="https://github.com/start-angular/SB-Admin-BS4-Angular-2/archive/master.zip" class="nav-link btn mt-1" role="button" style="padding: .375rem 1rem !important; border-color: #999;">Download Now</a>
-                </li> &nbsp;
-                <li class="nav-item">
-                    <a href="javascript:void(0)" class="nav-link mt-1" style="padding: 0.375rem 1rem !important; border-color: #999;" (click)="rltAndLtr()">RTL/LTR</a>
-                </li> &nbsp;
                 <li class="dropdown nav-item" ngbDropdown>
                     <!-- <div class="dropdown"> -->
                     <a class="nav-link" href="javascript:void(0)" ngbDropdownToggle>
@@ -61,11 +52,10 @@
                 </li>
                 <div class="nav-item dropdown" ngbDropdown>
                     <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
-                        <i class="fa fa-user"></i> John Smith <b class="caret"></b>
+                        <i class="fa fa-user"></i> {{ username }} <b class="caret"></b>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="jvascript:void(0)"><i class="fa fa-fw fa-user"></i> Profile</a>
-                        <a class="dropdown-item" href="jvascript:void(0)"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
                         <a class="dropdown-item" href="jvascript:void(0)"><i class="fa fa-fw fa-gear"></i> Settings</a>
                         <a class="dropdown-item" [routerLink]="['/login']"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                     </div>
