--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,7 +3,7 @@
         <button class="navbar-toggler navbar-toggler-right" (click)="toggleSidebar()">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">RAGE Analytics</a>
+        <a class="navbar-brand" href="#"><img style="width: 20px; height: auto;" src="assets/images/r.png"> RAGE Analytics</a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto mt-2 mt-md-0">
                 <li class="dropdown nav-item" ngbDropdown>
