--- a/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/src/app/shared/modules/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
+<!--<nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
     <ul class="list-group">
         <a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;Dashboard
@@ -49,4 +49,24 @@
             More Themes
         </a>
     </ul>
+</nav>-->
+
+<nav id="mainNav" class="navbar fixed-top navbar-toggleable-md navbar-inverse bg-inverse" [ngClass]="{sidebarPushRight: isActive}">
+    <div class="collapse navbar-collapse" id="navbarExample">
+        <ul class="sidebar-nav navbar-nav">
+            <li class="nav-item rage" *ngFor="let game of gamesService.Games()">
+                <a class="nav-link nav-link-collapse" [routerLink]="['/games', game._id]" [routerLinkActive]="['router-link-active']" (click)="Switch('game' + game._id)"><img class="ico" src="assets/images/game.png">{{ game.title }}</a>
+                <ul class="sidebar-second-level collapse" [class.collapsed]="menus.indexOf('game'+game._id) === -1" *ngFor="let classe of game.classes">
+                    <li>
+                        <a class="nav-link-collapse" (click)="Switch('class' + classe._id)"><i class="fa fa-fw fa-users"></i> {{ classe.name }}</a>
+                        <ul class="sidebar-third-level collapse" [class.collapsed]="menus.indexOf('class'+classe._id) === -1" *ngFor="let session of classe.sessions">
+                            <li>
+                                <a><i class="fa fa-fw fa-calendar-times-o"></i> {{ session.name }}</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </nav>
