--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="login-page">
     <div class="row">
         <div class="col-md-4 push-md-4">
-            <img src="assets/images/logo.png" width="150px" class="user-avatar" />
-            <h1>SB Admin BS 4 Angular2</h1>
+            <img src="assets/images/r.png" width="150px" />
+            <h1>RAGE Analytics</h1>
             <form role="form">
                 <div class="form-content">
                     <div class="form-group">
@@ -13,7 +13,7 @@
                         <input name="password" type="password" [(ngModel)]="model.password" class="form-control input-underline input-lg" id="" placeholder="Password">
                     </div>
                 </div>
-                <a class="btn rounded-btn" (click)="login($event)"> Submit </a>
+                <a class="btn rounded-btn" style="cursor: pointer;" (click)="login($event)"> Submit </a>
                 &nbsp;
                 <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a>
             </form>
