--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,4 +1,4 @@
-$topnav-background-color: #222;
+$topnav-background-color: #292b2c;
 .topnav {
     border-radius: 0;
     background-color: $topnav-background-color;
